feat: 对话历史压缩 + 记忆系统增强 + Plan-and-Execute 重构
记忆系统修复与增强：
- 新增 ConversationHistoryCompactor：LLM 调前评估对话历史 token，超阈值时按
  user 消息边界分割、旧消息调 LLM 摘要、原地替换，解决压缩 MemoryEntry 但
  从未压缩实际 API 消息列表的结构性 Bug
- 新增 LongTermMemory 同 key 覆盖去重、启动时按 key 清理历史脏数据
- 新增 ContextCompressor 事实提取三层输出过滤（临时请求前缀 / 推测词 / 耐久特征）
  + 仅从 user 消息提取，避免 Agent 建议被误存为事实
- 新增 MemoryManager.getSystemStatus()，/memory 输出短期/长期/Token 完整状态
- /save 命令支持参数手动存储：/save <事实> 直接存不走 LLM
- 启动时提示思考模式默认关闭及开启方式

Plan-and-Execute 重构：
- 每 task 改为 mini ReAct 循环（最多 5 轮），LLM 自主多轮工具调用后结束
- 新增 PlanReviewHandler 执行前审查（y=执行 / n=取消 / 反馈补充重新规划）
- 并行输出改用 ByteArrayOutputStream 缓冲，按任务顺序 flush 防交错